deployment/manifests/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kube-manager
  labels:
    app.kubernetes.io/name: deployment
    app.kubernetes.io/instance: kube-manager
  annotations:
    argocd.argoproject.io/sync-wave: "3"
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: deployment
      app.kubernetes.io/instance: kube-manager
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 10%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/name: deployment
        app.kubernetes.io/instance: kube-manager
    spec:
      serviceAccount: kube-manager
      volumes:
        - name: credentials
          emptyDir: {}
      containers:
        - image: docker.io/library/tomelin/desafio-stn:latest
          imagePullPolicy: IfNotPresent
          name: kube-manager
          securityContext:
            runAsGroup: 1000
            runAsUser: 1000
          volumeMounts:
            - name: credentials
              mountPath: /app/secrets
              readOnly: true
          ports:
            - name: app
              containerPort: 8443
              protocol: TCP
          resources: 
            requests:
              memory: "32Mi"
              cpu: "250m"
            limits:
              memory: "128Mi"
              cpu: "500m"
